lingxi-core/crates/tui/src/render/snapshots/lingxi_tui__render__markdown__tests__snapshot_fenced_code_highlighted.snap
---
source: crates/tui/src/render/markdown.rs
expression: "fence_structure(&render(\"```rust\\nfn main() {}\\n```\", &theme()))"
---
[C]fn[C] [C]main[C]([C])[C] [C]{[C]}[C]
