lingxi-core/crates/tui/src/render/snapshots/lingxi_tui__render__markdown__tests__snapshot_fenced_code_placeholder.snap
---
source: crates/tui/src/render/markdown.rs
expression: "render(\"```rust\\nfn main() {}\\n```\", &theme())"
---
- spans:
    - text: "fn main() {}\n"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind:
        CodePlaceholder:
          lang: rust
