lingxi-core/crates/tui/src/render/snapshots/lingxi_tui__render__markdown__tests__snapshot_partial_unclosed_fence.snap
---
source: crates/tui/src/render/markdown.rs
expression: "render(\"text\\n```python\\nprint(1)\", &theme())"
---
- spans:
    - text: text
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
- spans: []
- spans:
    - text: print(1)
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind:
        CodePlaceholder:
          lang: python
